www/css/dialogueprompt.css
    .commentmodal,.progressmodal {
        overflow-x: hidden;
        overflow-y: auto;
    }

    .commentfade.commentin,.progressfade.progressin {
        opacity: 1;
    }

    .commentmodal,.progressmodal {
        position: fixed;
        top: 0;
        right: 0;
        bottom: 0;
        left: 0;
        z-index: 1050;
        display: none;
        overflow: hidden;
        -webkit-overflow-scrolling: touch;
        outline: 0;
    }

    .commentfade,.progressfade {
        opacity: 0;
        -webkit-transition: opacity .15s linear;
        -o-transition: opacity .15s linear;
        transition: opacity .15s linear;
    }

    .commentmodal-dialog,.progressmodal-dialog {
        -webkit-transform: translate3d(0,0,0);
        transform: translate3d(0,0,0);
    }

    .commentmodal-dialog,.progressmodal-dialog {
        -webkit-transition: -webkit-transform .3s ease-out;
        -o-transition: -o-transform .3s ease-out;
        transition: transform .3s ease-out;
        -webkit-transform: translate3d(0,-25%,0);
        transform: translate3d(0,-25%,0);
    }

    .commentmodal-dialog,.progressmodal-dialog {
        position: relative;
        width: 300px;
        margin: 200px auto;
    }

    .commentmodal-content,.progressmodal-content {
        -webkit-box-shadow: 0 5px 15px rgba(0,0,0,.5);
        box-shadow: 0 5px 15px rgba(0,0,0,.5);
        position: relative;
        background-color: #fff;
        -webkit-background-clip: padding-box;
        background-clip: padding-box;
        border: 1px solid #999;
        border: 1px solid rgba(0,0,0,.2);
        border-radius: 6px;
        outline: 0;
    }
    .commentmodal-body {
        position: relative;
        padding: 0px;
        word-wrap: break-word;
    }

    .commentform-control {
        display: block;
        width: 90% !important;
        height: 55px !important;
        padding: 6px 12px !important;
        font-size: 14px !important;
        line-height: 1.42857143 !important;
        color: #555 !important;
        background-color: #fff !important;
        background-image: none !important;
        border: 1px solid #fff !important;
        border-radius: 4px !important;
        -webkit-box-shadow: inset 0 1px 1px rgba(0,0,0,.075) !important;
        box-shadow: inset 0 1px 1px rgba(0,0,0,.075) !important;
        -webkit-transition: border-color ease-in-out .15s,-webkit-box-shadow ease-in-out .15s !important;
        -o-transition: border-color ease-in-out .15s,box-shadow ease-in-out .15s !important;
        transition: border-color ease-in-out .15s,box-shadow ease-in-out .15s !important;
        word-wrap: break-word;
    }

    .commentmodal-footer {
        padding: 10px;
        text-align: center;
        font-size: 12px;
        border-bottom: 1px solid #aaa;
        height: 5px;
        background-color: #E2E7E6
    }
    .commentmodal-footerText{ margin-top: -3%}
    .commentmodal-backdrop.commentin {
        filter: alpha(opacity=50);
        opacity: 0.0;
    }
    
    .commentmodal-backdrop {
        position: fixed;
        top: 0;
        right: 0;
        bottom: 0;
        left: 0;
        z-index: 1040;
        background-color: #000;
    }
    .commentSavebtn span,.commentCancelbtn span{
      color: #0088cc;
      padding: 55px;
    }
    .commentSavebtn{
        display: inline-block;
        margin-bottom: 0px;
        margin-top: 0px;
        margin-left: 0px;
        border-right: 1px solid #aaa;
        width: 49%;
        height: 40px;
        background-color: #E2E7E6;
        border-bottom-left-radius: 6px;
    }
    .commentCancelbtn{
        display: inline-block;
        margin-bottom: 0;
        margin-left: -4px;
        width: 50%;
        height: 40px;
        background-color: #E2E7E6;
        border-bottom-right-radius: 6px;
    }
    /* Android SIII Phone Landscape Mode*/
	@media handheld, only screen and (max-width:640px){
		 
        .commentmodal-backdrop.commentin {
          filter: alpha(opacity=50);
          opacity: .5;
        }
        .commentform-control {
           height: 70px !important;
        }
	}
    
    @media handheld, only screen and (max-width: 568px) {
       .commentmodal {
        top: -30px;
        }
        .commentmodal-backdrop.commentin {
          filter: alpha(opacity=50);
          opacity: .5;
        }
		body #commentModal  .commentmodal-dialog { margin: 50% auto; top: -60px; }
		.commentSavebtn span, .commentCancelbtn span {padding: 8px 55px;
		display: inline-block;}
    }
    @media handheld, only screen and (max-width: 360px) {
       .commentform-control {
          height: 120px !important;
        }
    }
    @media handheld, only screen and (max-width: 320px) {
      .commentmodal {
         top: 120px;
      }
      .commentmodal-backdrop.commentin {
          filter: alpha(opacity=50);
          opacity: .5;
        }
    }
@media handheld, only screen and (min-width: 550px) {
    html body #commentModal  .commentmodal-dialog { margin: 50% auto; top:-150px; }
    .commentSavebtn span, .commentCancelbtn span {padding: 8px 55px;
        display: inline-block;}
}

